--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1246,7 +1246,7 @@ a {
 .cid-ucWcCgsrxd {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-ucWcCgsrxd .mbr-fallback-image.disabled {
   display: none;
