--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1128,15 +1128,15 @@ a {
 }
 .cid-ucV1fhc37D {
   display: flex;
-  background-image: url("../../../assets/images/gambar-whatsapp-2024-04-22-pukul-06.35.40-54c6fab1-1040x780.jpg");
+  background-image: url("../../../assets/images/snapedit-1714630634989-01.jpeg-1-1280x960.jpeg");
 }
 .cid-ucV1fhc37D .mbr-overlay {
-  background-color: #000000;
+  background-color: #51a8a6;
   opacity: 0.5;
 }
 @media (min-width: 768px) {
   .cid-ucV1fhc37D {
-    align-items: center;
+    align-items: flex-end;
   }
   .cid-ucV1fhc37D .row {
     justify-content: center;
@@ -1153,7 +1153,7 @@ a {
 @media (max-width: 767px) {
   .cid-ucV1fhc37D {
     -webkit-align-items: center;
-    align-items: center;
+    align-items: flex-end;
   }
   .cid-ucV1fhc37D .mbr-row {
     -webkit-justify-content: center;
@@ -1405,7 +1405,7 @@ a {
 .cid-ucBXWmiGdQ {
   padding-top: 4rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #0c2c68;
 }
 @media (max-width: 991px) {
   .cid-ucBXWmiGdQ .container {
@@ -1428,7 +1428,7 @@ a {
 }
 .cid-ucBXWmiGdQ .social-row .soc-item a:hover .mbr-iconfont,
 .cid-ucBXWmiGdQ .social-row .soc-item a:focus .mbr-iconfont {
-  background-color: #0c2c68;
+  background-color: #232323;
 }
 .cid-ucBXWmiGdQ .social-row .soc-item a .mbr-iconfont {
   width: 72px;
@@ -3370,131 +3370,6 @@ a {
 .cid-ucBXWmiGdQ .mbr-section-title {
   color: #ffffff;
 }
-.cid-ucVQFldeIu {
-  padding-top: 5rem;
-  padding-bottom: 2rem;
-  background-color: #ffffff;
-}
-@media (min-width: 992px) {
-  .cid-ucVQFldeIu .carousel {
-    max-height: 400px;
-  }
-  .cid-ucVQFldeIu .carousel img {
-    height: 400px;
-    object-fit: cover;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-ucVQFldeIu .carousel {
-    min-height: 260px;
-  }
-  .cid-ucVQFldeIu .carousel img {
-    height: 260px;
-    object-fit: cover;
-  }
-}
-@media (max-width: 767px) {
-  .cid-ucVQFldeIu .carousel {
-    min-height: 220px;
-  }
-  .cid-ucVQFldeIu .carousel img {
-    height: 220px;
-    object-fit: cover;
-  }
-  .cid-ucVQFldeIu .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-ucVQFldeIu .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-ucVQFldeIu .carousel,
-.cid-ucVQFldeIu .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-ucVQFldeIu .item-wrapper {
-  width: 100%;
-}
-.cid-ucVQFldeIu .item-menu-overlay {
-  border-radius: 2rem;
-}
-.cid-ucVQFldeIu .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-ucVQFldeIu .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-ucVQFldeIu .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-ucVQFldeIu .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-ucVQFldeIu .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-ucVQFldeIu .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-ucVQFldeIu .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-ucVQFldeIu .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-ucVQFldeIu .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-ucVQFldeIu .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-ucVQFldeIu .carousel-indicators li.active,
-.cid-ucVQFldeIu .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-ucVQFldeIu .carousel-indicators li::after,
-.cid-ucVQFldeIu .carousel-indicators li::before {
-  content: none;
-}
-.cid-ucVQFldeIu .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-ucVQFldeIu .carousel-indicators {
-    display: none !important;
-  }
-}
 .cid-ucU9V9E2L9 {
   z-index: 1000;
   width: 100%;
@@ -3845,6 +3720,131 @@ a {
     width: 175%;
     max-width: calc(100% + 2rem);
     left: -1rem;
+  }
+}
+.cid-ucVQFldeIu {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-ucVQFldeIu .carousel {
+    max-height: 400px;
+  }
+  .cid-ucVQFldeIu .carousel img {
+    height: 400px;
+    object-fit: cover;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-ucVQFldeIu .carousel {
+    min-height: 260px;
+  }
+  .cid-ucVQFldeIu .carousel img {
+    height: 260px;
+    object-fit: cover;
+  }
+}
+@media (max-width: 767px) {
+  .cid-ucVQFldeIu .carousel {
+    min-height: 220px;
+  }
+  .cid-ucVQFldeIu .carousel img {
+    height: 220px;
+    object-fit: cover;
+  }
+  .cid-ucVQFldeIu .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-ucVQFldeIu .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-ucVQFldeIu .carousel,
+.cid-ucVQFldeIu .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-ucVQFldeIu .item-wrapper {
+  width: 100%;
+}
+.cid-ucVQFldeIu .item-menu-overlay {
+  border-radius: 2rem;
+}
+.cid-ucVQFldeIu .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-ucVQFldeIu .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-ucVQFldeIu .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-ucVQFldeIu .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-ucVQFldeIu .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-ucVQFldeIu .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-ucVQFldeIu .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-ucVQFldeIu .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-ucVQFldeIu .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-ucVQFldeIu .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-ucVQFldeIu .carousel-indicators li.active,
+.cid-ucVQFldeIu .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-ucVQFldeIu .carousel-indicators li::after,
+.cid-ucVQFldeIu .carousel-indicators li::before {
+  content: none;
+}
+.cid-ucVQFldeIu .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-ucVQFldeIu .carousel-indicators {
+    display: none !important;
   }
 }
 .cid-ubCNZjGPR1 {
