--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -29,11 +29,11 @@ body {
 }
 .display-2 {
   font-family: 'Archivo Black', sans-serif;
-  font-size: 3.6rem;
+  font-size: 3.2rem;
   line-height: 1;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.5rem;
+  font-size: 4rem;
 }
 .display-4 {
   font-family: 'Inter Tight', sans-serif;
@@ -76,9 +76,9 @@ body {
     line-height: calc( 1.1 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.88rem;
-    font-size: calc( 1.91rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.3 * (1.91rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.56rem;
+    font-size: calc( 1.77rem + (3.2 - 1.77) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.3 * (1.77rem + (3.2 - 1.77) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 1.12rem;
@@ -103,9 +103,9 @@ body {
     line-height: calc( 1.1 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 62rem) / (87 - 62))));
   }
   .display-2 {
-    font-size: 2.88rem;
-    font-size: calc( 1.91rem + (3.6 - 1.91) * ((100vw - 62rem) / (87 - 62)));
-    line-height: calc( 1.3 * (1.91rem + (3.6 - 1.91) * ((100vw - 62rem) / (87 - 62))));
+    font-size: 2.56rem;
+    font-size: calc( 1.77rem + (3.2 - 1.77) * ((100vw - 62rem) / (87 - 62)));
+    line-height: calc( 1.3 * (1.77rem + (3.2 - 1.77) * ((100vw - 62rem) / (87 - 62))));
   }
   .display-4 {
     font-size: 1.12rem;
@@ -774,6 +774,63 @@ a {
     padding-right: 16px;
   }
 }
+.cid-ud0eUW2rEf {
+  display: flex;
+  padding-top: 7rem;
+  padding-bottom: 4rem;
+  background-image: url("../../../assets/images/snapedit-1714630634989-1280x960.jpg");
+}
+.cid-ud0eUW2rEf .mbr-overlay {
+  background-color: #2e481a;
+  opacity: 0.7;
+}
+.cid-ud0eUW2rEf .content-wrap {
+  padding: 5rem 1rem;
+}
+@media (min-width: 992px) {
+  .cid-ud0eUW2rEf .content-wrap {
+    padding: 5rem 3rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-ud0eUW2rEf {
+    align-items: center;
+  }
+  .cid-ud0eUW2rEf .row {
+    justify-content: center;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-ud0eUW2rEf .content-wrap {
+    min-width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .cid-ud0eUW2rEf {
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-ud0eUW2rEf .mbr-row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .cid-ud0eUW2rEf .content-wrap {
+    width: 100%;
+  }
+}
+.cid-ud0eUW2rEf .mbr-section-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ud0eUW2rEf .mbr-text,
+.cid-ud0eUW2rEf .mbr-section-btn {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-ud0eUW2rEf .mbr-description {
+  text-align: center;
+  color: #ffffff;
+}
 .cid-ucU9V9E2L9 {
   z-index: 1000;
   width: 100%;
@@ -1126,58 +1183,10 @@ a {
     left: -1rem;
   }
 }
-.cid-ucV1fhc37D {
-  display: flex;
-  background-image: url("../../../assets/images/snapedit-1714630634989-01.jpeg-1-1280x960.jpeg");
-}
-.cid-ucV1fhc37D .mbr-overlay {
-  background-color: #51a8a6;
-  opacity: 0.5;
-}
-@media (min-width: 768px) {
-  .cid-ucV1fhc37D {
-    align-items: flex-end;
-  }
-  .cid-ucV1fhc37D .row {
-    justify-content: center;
-  }
-  .cid-ucV1fhc37D .content-wrap {
-    padding: 1rem 3rem;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-ucV1fhc37D .content-wrap {
-    min-width: 50%;
-  }
-}
-@media (max-width: 767px) {
-  .cid-ucV1fhc37D {
-    -webkit-align-items: center;
-    align-items: flex-end;
-  }
-  .cid-ucV1fhc37D .mbr-row {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-  .cid-ucV1fhc37D .content-wrap {
-    width: 100%;
-  }
-}
-.cid-ucV1fhc37D .mbr-section-title,
-.cid-ucV1fhc37D .mbr-section-subtitle {
-  text-align: center;
-}
-.cid-ucV1fhc37D .mbr-text,
-.cid-ucV1fhc37D .mbr-section-btn {
-  text-align: center;
-}
-.cid-ucV1fhc37D .mbr-section-title {
-  color: #ffffff;
-}
 .cid-ubCFgM1FLH {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #d3fab9;
+  background-color: #1f6463;
 }
 .cid-ubCFgM1FLH h6 {
   line-height: 1.2;
@@ -1207,7 +1216,7 @@ a {
   text-align: center;
 }
 .cid-ubCFgM1FLH .mbr-section-title {
-  color: #232323;
+  color: #ffffff;
 }
 .cid-ubCFgM1FLH .mbr-text,
 .cid-ubCFgM1FLH .mbr-section-btn {
