create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1134,7 +1134,7 @@ a {
 }
 .cid-ud0eUW2rEf .mbr-overlay {
   background-color: #2e481a;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .cid-ud0eUW2rEf .content-wrap {
   padding: 5rem 1rem;
@@ -2449,7 +2449,7 @@ a {
 }
 .cid-uaX3FI2PYV .mbr-section-title {
   text-align: center;
-  color: #ffffb6;
+  color: #ffffff;
 }
 .cid-uaX3FI2PYV .mbr-text,
 .cid-uaX3FI2PYV .mbr-section-btn {
@@ -2585,7 +2585,7 @@ a {
   max-width: 800px;
 }
 .cid-ucVQubm6Jy .card-text {
-  color: #2e481a;
+  color: #232323;
   text-align: left;
 }
 .cid-ucVQubm6Jy .card-title {
@@ -3162,21 +3162,21 @@ a {
   .cid-ubGzdwKSAD .card-wrapper {
     padding: 1.5rem;
     padding-top: 15rem;
-    padding-bottom: 15rem;
+    padding-bottom: 10.5rem;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .cid-ubGzdwKSAD .card-wrapper {
     padding: 2.25rem;
     padding-top: 30rem;
-    padding-bottom: 30rem;
+    padding-bottom: 21rem;
   }
 }
 @media (min-width: 992px) {
   .cid-ubGzdwKSAD .card-wrapper {
     padding: 4rem;
     padding-top: 30rem;
-    padding-bottom: 30rem;
+    padding-bottom: 21rem;
   }
 }
 .cid-ubGzdwKSAD .wrap {
@@ -3328,7 +3328,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1bA31iIh .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1bA31iIh .card-title {
@@ -3997,7 +3997,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1be3sdNm .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1be3sdNm .card-title {
@@ -4607,7 +4607,7 @@ a {
   max-width: 800px;
 }
 .cid-ucVR23t68o .card-text {
-  color: #393193;
+  color: #232323;
   text-align: left;
 }
 .cid-ucVR23t68o .card-title {
@@ -5208,7 +5208,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1c2CSZJi .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1c2CSZJi .card-title {
@@ -6430,7 +6430,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1cSX390k .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1cSX390k .card-title {
@@ -7598,7 +7598,7 @@ a {
   color: #c37a7a;
 }
 .cid-udjbZ1Wtem .card-title {
-  color: #bbbbbb;
+  color: #ffffff;
 }
 .cid-udjbZ1Wtem .mbr-text {
   color: #bbbbbb;
@@ -7642,7 +7642,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1nnvgbBZ .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1nnvgbBZ .card-title {
@@ -8364,7 +8364,7 @@ a {
   max-width: 800px;
 }
 .cid-ud1dFetMk1 .card-text {
-  color: #1f6463;
+  color: #232323;
   text-align: left;
 }
 .cid-ud1dFetMk1 .card-title {
